--- a/package.json
+++ b/package.json
@@ -1,15 +1,55 @@
 {
-  "name": "drawspace-fe",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  }
+	"name": "drawspace-fe",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev -p 8686",
+		"build": "next build",
+		"start": "next start",
+		"deploy": "next build && next export && aws s3 sync ./out s3://ftwebhoststaging-content88381566-grp39bp7gern --profile FtStagingAdmin && aws cloudfront create-invalidation --distribution-id EY7DW8CHD9MT2 --paths \"/*\" --profile FtStagingAdmin"
+	},
+	"dependencies": {
+		"@aws-amplify/auth": "^3.3.5",
+		"@aws-amplify/core": "^3.4.6",
+		"@aws-amplify/storage": "^3.2.13",
+		"@material-ui/core": "^4.10.2",
+		"@material-ui/icons": "^4.9.1",
+		"@material-ui/lab": "^4.0.0-alpha.56",
+		"@material-ui/styles": "^4.10.0",
+		"clsx": "^1.1.1",
+		"dashjs": "^3.1.1",
+		"final-form": "^4.20.1",
+		"next": "^9.4.4",
+		"qs": "^6.9.4",
+		"ramda": "^0.27.0",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-final-form": "^6.5.0",
+		"react-query": "^2.23.1",
+		"react-query-devtools": "^2.3.0",
+		"react-resize-aware": "^3.0.1",
+		"react-spring": "^9.0.0-rc.3",
+		"react-use-gesture": "^7.0.15",
+		"react-virtualized-auto-sizer": "^1.0.2",
+		"secure-random-password": "^0.2.1",
+		"validate.js": "^0.13.1"
+	},
+	"devDependencies": {
+		"@types/node": "^14.11.8",
+		"@types/ramda": "^0.27.29",
+		"@types/react": "^16.9.52",
+		"@types/validate.js": "^0.11.0",
+		"@typescript-eslint/eslint-plugin": "^4.4.1",
+		"@typescript-eslint/parser": "^4.4.1",
+		"eslint": "^7.11.0",
+		"eslint-config-airbnb": "^18.2.0",
+		"eslint-config-prettier": "^6.12.0",
+		"eslint-import-resolver-typescript": "^2.3.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.3.1",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.21.4",
+		"prettier": "^2.1.2",
+		"typescript": "^4.0.3"
+	}
 }
